tests/errors/compiler/empty_init/empty_init.c
int main() 
{	
	int arr[][] = {{1}, {2}};
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}